log and other features added

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,10 +1,10 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,600,700);
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 /*You can add your won color also */
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 13px;
   line-height: 21px;
-  font-weight: 400;
+  font-weight: 600;
   color: #666;
   /*background: url(../img/patterns/1.png) fixed repeat;*/
 }
@@ -52,7 +52,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   margin: 0;
 }
@@ -83,12 +83,12 @@ h6 {
 p {
   color: #666;
   font-size: 13px;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   line-height: 22px;
   margin: 0;
 }
 p strong {
-  font-weight: 600;
+  font-weight: 800;
 }
 .accent-color-bg {
   color: #fff;
@@ -438,7 +438,7 @@ ul.social-list li a.vimeo:hover {
   padding-bottom: 20px;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #999;
+  color: #161616;
   display: block;
   font-size: 14px;
   border-radius: 4px;
@@ -487,7 +487,7 @@ ul.social-list li a.vimeo:hover {
   display: block;
   color: #666;
   font-size: 13px;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   padding: 11px 16px;
   margin: 3px 0;
   text-decoration: none;
@@ -2687,10 +2687,10 @@ footer a {
   overflow: hidden;
 }
 .services-3-icon h4 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #404449;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 600;
   margin: 0px 0px 15px 0px;
   text-align: right;
   display: table-cell;
@@ -4534,4 +4534,26 @@ html {
 /*customized*/
 .add-margin-20{
   margin-top: 20px;
+}
+.add-margin-10{
+  margin-top: 10px;
+}
+
+.vision img{
+  padding: 20px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+}
+.vision-bg{
+  background-color:#dcdcdc ;
+}
+.quote{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 600px)and (max-width: 3000px) {
+.nav-logo{
+  margin-top: -20px;
+}
 }
